fix footer on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,6 +21,10 @@ html {
       font-size: 1rem;
       padding: 0.25rem;
     }
+
+    .nav-item .nav-link {
+      font-size: 0.8rem; 
+    }
   }
   
 
